Updated SwaggerDocs to reflect the new query parameter. Also, changed moveType to hitboxType
